# DeBugg

./: .gitignore  README.md  alembic.ini  config.py  pyproject.toml
ML/: main.py  skillsCheck.py
ML/data/raw/: questions.py
ML/gigachat-api/: main.py  requirements.txt
Mail/: .env  mail.py
backend/: server.py  test.db
backend/app/: app.py  parser_pdf.py
backend/app/authentication/: auth.py  security.py  token.py
backend/app/mailer/: email_message.html  email_message.txt  mail.py
backend/models/: config.py  crud.py  database.py  models.py  parser_pdf.py  schemas.py
backend/utils/pdf_processing/: text_extraction.py
frontend/: package.json
frontend/Register&Entered/src/: App.css  App.js  LoginPage.js  RegistrationPage.js
frontend/RegisterLogin/components/: Footer.js  Header.js
frontend/RegisterLogin/starts/: App.js
frontend/RegisterLogin/styles/: Footer.css  Header.css
frontend/src/: App.js  index.css  index.js
frontend/src/components/: AuthModal.js  Footer.js  Header.js
frontend/src/pages/: Account.js  Home.js  LoginPage.js  Payment.js  RegisterPage.js  UploadResume.js
frontend/src/styles/: Account.css  AuthModal.css  Footer.css  Header.css  Home.css  LoginPage.css  Payment.css  RegisterPage.css
migrations/: env.py
migrations/versions/: 0c637cd237f6_add_resume_table.py  5a0707b3629f_adding_columns_for_user.py  5d5152ec2692_added_surname_and_name.py  f2cd011e3c8b_initial_revision.py  fff8e3e9ce42_added_surname_and_name.py
