[tool.poetry]
name = "resumeai"
version = "0.1.0"
description = "AI for resume analysis"
authors = ["Ivan Mavrin <mmavrin80@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
npm = "^0.1.1"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
alembic = "^1.15.1"
pydantic-settings = "^2.8.1"
dotenv = "^0.9.9"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
PyPDF2 = "^3.0.1"
pdfminer-six = "20231228"
pdfplumber = "0.11.5"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
pillow = "^11.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
